--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,12 @@
-private/
-notes/
-migrations/
-# custom ignore
-*.pkl
-
-# ignore sqlite file
-db.sqlite3
-
-# Byte-compiled / optimized / DLL files
-__pycache__/
+# Python
 *.py[cod]
-*$py.class
-
-*.cache
-# C extensions
+__pycache__/
 *.so
-# Distribution / packaging
 .Python
 env/
-student_ms/
 build/
 develop-eggs/
+dist/
 downloads/
 eggs/
 .eggs/
@@ -29,80 +15,37 @@ lib64/
 parts/
 sdist/
 var/
-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*,cover
-.hypothesis/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
+# Django
 *.log
 local_settings.py
+db.sqlite3
+db.sqlite3-journal
+media/
 
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# pyenv
-.python-version
-
-# celery beat schedule file
-celerybeat-schedule
-
-# dotenv
+# Environment variables
 .env
+.env.local
+.env.*.local
 
-# virtualenv
-env/
-.venv/
+# VS Code
+.vscode/
+
+# PyCharm
+.idea/
+
+# Static files
+staticfiles/
+
+# Virtual Environment
 venv/
 ENV/
 
-# Spyder project settings
-.spyderproject
+# Mac
+.DS_Store
 
-# Rope project settings
-.ropeproject
-
-.idea/
-data/wip/
-
-
-#custom_.ig
-notes/
+# Windows
+Thumbs.db
