--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ Pillow==8.3.1
 pytz==2021.1
 sqlparse==0.4.1
 typing-extensions==3.10.0.2
+whitenoise==6.5.0
+gunicorn==21.2.0
+psycopg2-binary==2.9.7
+dj-database-url==2.1.0
