--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.4.1
 Django==3.2.6
 django-countries==7.2.1
 django-crispy-forms==1.12.0
+django-filter==21.1
 Pillow==8.3.1
 pytz==2021.1
 sqlparse==0.4.1
